--- a/examples/packing-configs/pcna_parallel_packing_config.json
+++ b/examples/packing-configs/pcna_parallel_packing_config.json
@@ -16,5 +16,6 @@
     "show_progress_bar": true,
     "spacing": 2.5,
     "use_periodicity": false,
-    "show_sphere_trees": false
+    "show_sphere_trees": false,
+    "upload_results": false
 }
