--- a/.github/workflows/cleanup-firebase.yml
+++ b/.github/workflows/cleanup-firebase.yml
@@ -2,7 +2,7 @@ name: Cleanup Firebase Metadata
 
 on:
     schedule:
-        - cron: "24 18 * * 1"
+        - cron: "24 18 * * 1" # Runs at 18:24 UTC every Monday
 
 jobs:
     cleanup:
@@ -21,14 +21,10 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install .[all]
-            - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v1
-              with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: us-west-2
             - name: Cleanup Firebase Metadata
               env:
                   STAGING_FIREBASE_TOKEN: ${{ secrets.STAGING_FIREBASE_TOKEN }}
                   STAGING_FIREBASE_EMAIL: ${{ secrets.STAGING_FIREBASE_EMAIL }}
-              run: #python scripts
+              run: |
+                  python cellpack/bin/cleanup_tasks.py
+                  echo "Cleanup complete."
