--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -14,9 +14,9 @@ jobs:
                 python-version: [3.9]
                 os: [ubuntu-latest]
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v4
+              uses: actions/setup-python@v5
               with:
                   python-version: ${{ matrix.python-version }}
             - name: Install Dependencies
@@ -41,9 +41,9 @@ jobs:
         runs-on: ubuntu-latest
         needs: [Analyze]
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v1-node16
+              uses: aws-actions/configure-aws-credentials@v4
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
