--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
     Analyze:
+        if: ${{ !contains(github.event.head_commit.message, 'Bump version') }}
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
