--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ on:
 
 jobs:
   test:
+    if: ${{ !contains(github.event.head_commit.message, 'Bump version') }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -46,7 +47,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-
+    if: ${{ !contains(github.event.head_commit.message, 'Bump version') }}
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
