--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.x"]
+        python-version: [3.11]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -80,7 +80,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: "3.x"
+        python-version: 3.11
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
