--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -56,6 +57,7 @@ jobs:
       with:
         python-version: 3.9
         cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -84,6 +86,7 @@ jobs:
       with:
         python-version: 3.9
         cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
