--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -20,6 +20,8 @@ jobs:
               uses: actions/setup-python@v5
               with:
                   python-version: ${{ matrix.python-version }}
+                  cache: "pip"
+                  cache-dependency-path: setup.py
             - name: Install Dependencies
               run: |
                   python -m pip install --upgrade pip
