--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -14,9 +14,11 @@ jobs:
       with:
         persist-credentials: false
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v5
       with:
         python-version: 3.9
+        cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         pip install --upgrade pip
