--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -54,6 +56,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.9
+        cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -81,6 +85,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.9
+        cache: "pip"
+        cache-dependency-path: setup.py
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
