remove default options from config

--- a/examples/packing-configs/peroxisome_packing_config.json
+++ b/examples/packing-configs/peroxisome_packing_config.json
@@ -1,19 +1,10 @@
 {
     "name": "analyze",
-    "format": "simularium",
-    "inner_grid_method": "trimesh",
-    "live_packing": false,
-    "ordered_packing": false,
     "number_of_packings": 1,
     "out": "out/analyze",
-    "overwrite_place_method": true,
-    "place_method": "spheresSST",
     "save_analyze_result": true,
-    "show_grid_plot": false,
     "save_plot_figures": true,
     "spacing": 2.5,
-    "use_periodicity": false,
-    "show_sphere_trees": false,
-    "load_from_grid_file": true,
+    "load_from_grid_file": false,
     "upload_results": false
 }
