--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,9 @@ updates:
       interval: "monthly"
     commit-message:
       prefix: "ci(dependabot):"
+    open-pull-requests-limit: 1
+    rebase-strategy: "auto"
+    groups:
+      actions:
+        patterns:
+          - "github-actions"
