--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -46,6 +46,14 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Configure AWS credentials
+              if: github.actor == 'dependabot[bot]'
+              uses: aws-actions/configure-aws-credentials@v4
+              with:
+                aws-access-key-id: ${{ secrets.DEPENDABOT_AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.DEPENDABOT_AWS_SECRET_ACCESS_KEY }}
+                aws-region: us-west-2
+            - name: Configure AWS credentials
+              if: github.actor != 'dependabot[bot]'
               uses: aws-actions/configure-aws-credentials@v4
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
