--- a/.gitignore
+++ b/.gitignore
@@ -74,9 +74,6 @@ target/
 .ipynb_checkpoints
 *.ipynb
 
-# pyenv
-.python-version
-
 # celery beat schedule file
 celerybeat-schedule
 
@@ -123,3 +120,6 @@ data/
 
 # credentials
 .creds
+
+# pdm files
+.pdm-python
