Refactor tox.ini: Update env_list and groups

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,13 @@
 [tox]
-skipsdist = True
-envlist = py38, py39, lint
-[flake8]
-ignore = E501,E277,W503,E203
+env_list = py39, lint
+
 [testenv:lint]
-deps =
-    .[test]
+groups = lint
 commands =
     flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
     black --check cellpack
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    .[test]
+groups = dev
 commands =
     pytest --basetemp={envtmpdir} --cov-report html --cov=cellpack cellpack/tests/
