Add PDM and Dependencies actions
Update build-docs workflow

Add cache-dependencies workflow

Update cleanup-firebase workflow

Update ci workflow

Update analyze workflow

Update analyze workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,16 +31,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        cache: "pip"
-        cache-dependency-path: setup.py
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .[all]
+    - uses: ./.github/actions/dependencies
     - name: Test with pytest
       run: |
         pytest --cov cellpack/tests/
@@ -52,16 +43,7 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, 'Bump version') }}
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
-        cache: "pip"
-        cache-dependency-path: setup.py
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .[test]
+    - uses: ./.github/actions/dependencies
     - name: Lint with flake8
       run: |
         flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
@@ -81,19 +63,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
-        cache: "pip"
-        cache-dependency-path: setup.py
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel
-    - name: Build Package
-      run: |
-        python setup.py sdist bdist_wheel
+    - uses: ./.github/actions/dependencies
     - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      run: pdm publish
 
