--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -16,17 +16,9 @@ jobs:
                 os: [ubuntu-latest]
         steps:
             - uses: actions/checkout@v4
-            - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v5
-              with:
-                  python-version: ${{ matrix.python-version }}
-                  cache: "pip"
-                  cache-dependency-path: setup.py
-            - name: Install Dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install .[all]
+            - uses: ./.github/actions/dependencies
             - name: Pack test recipe
+              shell: bash
               run: |
                   pack -r cellpack/tests/recipes/v2/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
             - name: Modify JSON with PR sub_directory path
@@ -36,7 +28,7 @@ jobs:
             - name: Run analysis code
               run: analyze -r cellpack/tests/recipes/v2/test_spheres.json -a cellpack/tests/analysis-configs/PR_analysis_config.json -p cellpack/tests/outputs/test_spheres/spheresSST
             - name: Upload results
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                   name: results
                   path: cellpack/tests/outputs/test_spheres/
@@ -59,7 +51,7 @@ jobs:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: us-west-2
-            - uses: actions/download-artifact@v3
+            - uses: actions/download-artifact@v4
             - name: Copy files to results bucket
               run: aws s3 cp ./results s3://cellpack-results/${{  github.ref_name  }}/ --recursive --acl public-read
             - uses: iterative/setup-cml@v1
