--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -10,19 +10,10 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, 'Bump version') }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.1
+    - uses: actions/checkout@v4
       with:
         persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.9
-        cache: "pip"
-        cache-dependency-path: setup.py
-    - name: Install Dependencies
-      run: |
-        pip install --upgrade pip
-        pip install .[dev]
+    - uses: ./.github/actions/dependencies
     - name: Generate Docs
       run: |
         make gen-docs
