--- a/.github/workflows/cleanup-firebase.yml
+++ b/.github/workflows/cleanup-firebase.yml
@@ -13,14 +13,7 @@ jobs:
                 os: [ubuntu-latest, windows-latest, macOS-latest]
         steps:
             -   uses: actions/checkout@v4
-            -   name: Set up Python ${{ matrix.python-version }}
-                uses: actions/setup-python@v5
-                with:
-                    python-version: ${{ matrix.python-version }}
-            -   name: Install dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install .[all]
+            -   uses: ./.github/actions/dependencies
             -   name: Cleanup Firebase Metadata
                 env:
                     FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
