--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-[tool.pdm]
-
 [project]
 name = "cellpack"
 version = "1.0.8"
@@ -8,17 +6,17 @@ keywords = ["cellpack"]
 readme = "README.md"
 authors = [
     {name = "Megan Riel-Mehan", email = "meganr@alleninstitute.org"},
+    {name = "Saurabh Mogre", email = "saurabh.mogre@alleninstitute.org"},
+    {name = "Ruge Li", email = "ruge.li@alleninstitute.org"},
 ]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
 ]
-requires-python = ">=3.9"
+requires-python = "==3.9.*"
 dependencies = [
     "aicsimageio>=4.10.0",
     "boto3>=1.28.3",
@@ -29,7 +27,6 @@ dependencies = [
     "mdutils>=1.4.0",
     "moto>=5.0.2",
     "numpy>=1.19.2",
-    "pandas>=1.2.4",
     "plotly>=5.3.1",
     "pycollada>=0.7.1",
     "pymunk>=6.2.0",
@@ -47,95 +44,40 @@ license = {text = "MIT license"}
 [project.urls]
 Homepage = "https://github.com/mesoscope/cellpack"
 
-[project.optional-dependencies]
-setup = [
-    "pytest-runner>=5.2",
-]
-test = [
-    "black>=19.10b0, <=23.0",
-    "flake8-debugger>=3.2.1",
-    "flake8>=3.8.3, <=6.0.0",
-    "pytest-cov>=2.9.0",
-    "pytest-raises>=0.11",
-    "pytest>=5.4.3",
-]
-dev = [
-    "Sphinx>=3.4.3",
-    "aicsimageio>=4.10.0",
-    "black>=19.10b0, <=23.0",
-    "bump2version>=1.0.1",
-    "coverage>=5.1",
-    "flake8-debugger>=3.2.1",
-    "flake8>=3.8.3, <=6.0.0",
-    "ipython>=7.15.0",
-    "m2r2>=0.2.7",
-    "mdutils>=1.4.0",
-    "pandas>=1.2.4",
-    "pytest-cov>=2.9.0",
-    "pytest-raises>=0.11",
-    "pytest-runner>=5.2",
-    "pytest-runner>=5.2",
-    "pytest>=5.4.3",
-    "scikit-learn>=1.1.3",
-    "seaborn>=0.12.1",
-    "sphinx_rtd_theme>=0.5.1",
-    "tox>=3.15.2",
-    "tqdm>=4.64.1",
-    "twine>=3.1.1",
-    "wheel>=0.34.2",
-]
-all = [
-    "Sphinx>=3.4.3",
-    "aicsimageio>=4.10.0",
-    "aicsimageio>=4.10.0",
-    "black>=19.10b0, <=23.0",
-    "boto3>=1.28.3",
-    "bump2version>=1.0.1",
-    "coverage>=5.1",
-    "deepdiff>=5.5.0",
-    "fire>=0.4.0",
-    "firebase_admin>=6.0.1",
-    "flake8-debugger>=3.2.1",
-    "flake8>=3.8.3, <=6.0.0",
-    "ipython>=7.15.0",
-    "m2r2>=0.2.7",
-    "matplotlib>=3.3.4",
-    "mdutils>=1.4.0",
-    "mdutils>=1.4.0",
-    "moto>=5.0.2",
-    "numpy>=1.19.2",
-    "pandas>=1.2.4",
-    "pandas>=1.2.4",
-    "plotly>=5.3.1",
-    "pycollada>=0.7.1",
-    "pymunk>=6.2.0",
-    "pytest-cov>=2.9.0",
-    "pytest-raises>=0.11",
-    "pytest-runner>=5.2",
-    "pytest-runner>=5.2",
-    "pytest>=5.4.3",
-    "python-dotenv>=1.0.0",
-    "rtree",
-    "scikit-learn>=1.1.3",
-    "scikit-learn>=1.1.3",
-    "scipy>=1.6.2",
-    "seaborn>=0.12.1",
-    "seaborn>=0.12.1",
-    "simulariumio>=1.6.3",
-    "sphinx_rtd_theme>=0.5.1",
-    "tox>=3.15.2",
-    "tqdm>=4.64.1",
-    "tqdm>=4.64.1",
-    "trimesh>=3.9.34",
-    "twine>=3.1.1",
-    "wheel>=0.34.2",
-]
-
 [project.scripts]
 analyze = "cellpack.bin.analyze:main"
 convert = "cellpack.bin.simularium_converter:main"
 pack = "cellpack.bin.pack:main"
 upload = "cellpack.bin.upload:main"
+
+[tool.pdm.dev-dependencies]
+setup = [
+    "pytest-runner>=5.2",
+]
+test = [
+    "pytest-cov>=2.9.0",
+    "pytest-raises>=0.11",
+    "pytest>=5.4.3",
+]
+lint = [
+    "black>=19.10b0, <=23.0",
+    "flake8-debugger>=3.2.1",
+    "flake8>=3.8.3, <=6.0.0",
+]
+dev = [
+    "Sphinx>=3.4.3",
+    "bump2version>=1.0.1",
+    "coverage>=5.1",
+    "ipython>=7.15.0",
+    "m2r2>=0.2.7",
+    "sphinx_rtd_theme>=0.5.1",
+    "tox>=3.15.2",
+    "wheel>=0.34.2",
+    "tox-pdm>=0.7.2",
+]
+
+[tool.pdm.scripts]
+requirements = "pdm export -f requirements --without-hashes -o"
 
 [build-system]
 requires = ["pdm-backend"]
