Update dependency installation script

--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -9,3 +9,4 @@ runs:
       shell: bash
       # --only-keep flag in case the environment is restored from a stale cache.
       run: pdm sync -d --only-keep
+      run: source .venv/bin/activate
