--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     - uses: ./.github/actions/dependencies
     - name: Test with pytest
       run: |
-        pytest --cov cellpack/tests/
+        pdm run pytest --cov cellpack/tests/
     - name: Upload codecov
       uses: codecov/codecov-action@v4
 
@@ -46,10 +46,10 @@ jobs:
     - uses: ./.github/actions/dependencies
     - name: Lint with flake8
       run: |
-        flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
+        pdm run flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
     - name: Check with black
       run: |
-        black --check cellpack
+        pdm run black --check cellpack
 
   publish:
     if: success() && startsWith(github.ref, 'refs/tags/')
