Refactor tox.ini to add 'test' and 'lint' groups

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,9 @@ commands =
     black --check cellpack
 
 [testenv]
-groups = dev
+groups = 
+    dev
+    test
+    lint
 commands =
     pytest --basetemp={envtmpdir} --cov-report html --cov=cellpack cellpack/tests/
