--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,26 +18,24 @@ classifiers = [
 ]
 requires-python = "==3.9.*"
 dependencies = [
-    "aicsimageio>=4.10.0",
-    "boto3>=1.28.3",
-    "deepdiff>=5.5.0",
-    "fire>=0.4.0",
-    "firebase_admin>=6.0.1",
-    "matplotlib>=3.3.4",
-    "mdutils>=1.4.0",
-    "moto>=5.0.2",
-    "numpy>=1.19.2",
-    "plotly>=5.3.1",
-    "pycollada>=0.7.1",
-    "pymunk>=6.2.0",
-    "python-dotenv>=1.0.0",
-    "rtree",
-    "scikit-learn>=1.1.3",
-    "scipy>=1.6.2",
-    "seaborn>=0.12.1",
-    "simulariumio>=1.6.3",
-    "tqdm>=4.64.1",
-    "trimesh>=3.9.34",
+    "aicsimageio>=4.14.0",
+    "boto3>=1.35.98",
+    "deepdiff>=8.1.1",
+    "fire>=0.7.0",
+    "firebase-admin>=6.6.0",
+    "matplotlib>=3.9.4",
+    "mdutils>=1.6.0",
+    "moto>=5.0.26",
+    "numpy>=2.0.2",
+    "plotly>=5.24.1",
+    "pycollada>=0.8",
+    "pymunk>=6.10.0",
+    "python-dotenv>=1.0.1",
+    "rtree>=1.3.0",
+    "scipy>=1.13.1",
+    "simulariumio>=1.11.0",
+    "tqdm>=4.67.1",
+    "trimesh>=4.5.3",
 ]
 license = {text = "MIT license"}
 
@@ -53,28 +51,28 @@ clean = "cellpack.bin.clean:main"
 
 [tool.pdm.dev-dependencies]
 setup = [
-    "pytest-runner>=5.2",
+    "pytest-runner>=6.0.1",
 ]
 test = [
-    "pytest-cov>=2.9.0",
+    "pytest-cov>=6.0.0",
     "pytest-raises>=0.11",
-    "pytest>=5.4.3",
+    "pytest>=8.3.4",
 ]
 lint = [
-    "black>=19.10b0, <=24.8.0",
-    "flake8-debugger>=3.2.1",
-    "flake8>=3.8.3, <=6.0.0",
+    "black>=24.10.0",
+    "flake8-debugger>=4.1.2",
+    "flake8>=7.1.1",
 ]
 dev = [
-    "Sphinx>=3.4.3",
-    "bump2version>=1.0.1",
-    "coverage>=5.1",
-    "ipython>=7.15.0",
-    "m2r2>=0.2.7",
-    "sphinx_rtd_theme>=0.5.1",
-    "tox>=3.15.2",
-    "wheel>=0.34.2",
+    "Sphinx>=7.4.7",
+    "coverage>=7.6.10",
+    "ipython>=8.18.1",
+    "m2r2>=0.3.3.post2",
+    "sphinx-rtd-theme>=3.0.2",
+    "tox>=4.23.2",
+    "wheel>=0.45.1",
     "tox-pdm>=0.7.2",
+    "bumpver>=2024.1130",
 ]
 
 [tool.pdm.scripts]
@@ -85,13 +83,68 @@ line-length = 88
 
 [tool.flake8]
 include = "**/*.py"
-ignore = 
-    E203
-    E402
-    E501
-    W291
-    W503
+ignore = [
+    "E203",
+    "E402",
+    "E501",
+    "E721",
+    "W291",
+    "W503",
+]
 max-line-length = 88
+
+[tool.tox]
+requires = [
+    "tox-pdm>=0.7.2",
+    "tox>=4.23.0",
+]
+env_list = [
+    "py39",
+    "lint",
+]
+base_python = "python3.9"
+
+[tool.tox.env_run_base]
+description = "Run tests with pytest under {base_python}"
+groups = [
+    "dev",
+    "test",
+    "lint",
+]
+commands = [
+    ["pytest", "--basetemp={envtmpdir}", "--cov-report", "html", "--cov=cellpack", "cellpack{/}tests"],
+]
+
+[tool.tox.env.lint]
+description = "Run linting with flake8 and black"
+groups = [
+    "lint",
+]
+commands = [
+    ["flake8", "cellpack", "--count", "--verbose", "--show-source", "--statistics", "--ignore=E203,E277,E402,E501,E721,W291,W503"],
+    ["black", "--check", "cellpack"],
+]
+
+[tool.bumpver]
+current_version = "1.0.8"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message = "bump version {old_version} -> {new_version}"
+tag_message = "{new_version}"
+tag_scope = "default"
+pre_commit_hook = ""
+post_commit_hook = ""
+commit = true
+tag = true
+push = false
+
+[tool.bumpver.file_patterns]
+"pyproject.toml" = [
+    'current_version = "{version}"',
+    'version = "{version}"',
+]
+"cellpack/__init__.py" = [
+    "{version}",
+]
 
 [build-system]
 requires = ["pdm-backend"]
