--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "tox-pdm>=0.7.2",
     "bumpver>=2024.1130",
     "docutils<0.21,>=0.18.1",
+    "ipykernel>=6.29.5",
 ]
 setup = ["pytest-runner>=6.0.1"]
 test = ["pytest-cov>=6.0.0", "pytest-raises>=0.11", "pytest>=8.3.4"]
