--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,10 @@ dev = [
     "bumpver>=2024.1130",
     "docutils<0.21,>=0.18.1",
 ]
-setup = ["pytest-runner>=6.0.1"]
+setup = [
+    "pytest-runner>=6.0.1",
+    "setuptools>=75.8.0",
+]
 test = ["pytest-cov>=6.0.0", "pytest-raises>=0.11", "pytest>=8.3.4"]
 lint = [
     "black>=24.10.0",
