--- a/.github/workflows/cleanup-aws.yml
+++ b/.github/workflows/cleanup-aws.yml
@@ -1,6 +1,9 @@
 name: Cleanup AWS S3 Bucket
 
 on: 
+  push:
+    branches:
+      - fix/cleanup-aws-workflow
   pull_request:
     types: [closed]
   
@@ -17,9 +20,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
     - name: Install AWS CLI
+    #install AWS CLI directly from AWS
       run: |
-        sudo apt-get update
-        sudo apt-get install -y awscli
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
     - name: Remove files in results sub_dir
       if: aws s3 ls s3://cellpack-results/${{  github.head_ref  }}
       run: aws s3 rm s3://cellpack-results/${{  github.head_ref  }} --recursive
