--- a/.github/workflows/cleanup-aws.yml
+++ b/.github/workflows/cleanup-aws.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
-        sudo ./aws/install
+        sudo ./aws/install --update
     - name: Remove files in results sub_dir
       if: aws s3 ls s3://cellpack-results/${{  github.head_ref  }}
       run: aws s3 rm s3://cellpack-results/${{  github.head_ref  }} --recursive
