Fix/cleanup aws workflow (#308)
* test: install aws

* add update flag

* remove testing branch

* test

* get rid of installation step

--- a/.github/workflows/cleanup-aws.yml
+++ b/.github/workflows/cleanup-aws.yml
@@ -16,10 +16,8 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
-    - name: Install AWS CLI
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y awscli
+    - name: Check AWS CLI version
+      run: aws --version
     - name: Remove files in results sub_dir
       if: aws s3 ls s3://cellpack-results/${{  github.head_ref  }}
       run: aws s3 rm s3://cellpack-results/${{  github.head_ref  }} --recursive
