--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -7,6 +7,12 @@ on:
       - fix/documentation-workflow
   workflow_dispatch:
 
+# Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -14,7 +20,11 @@ jobs:
     - uses: actions/checkout@v4.2.2
       with:
         persist-credentials: false
+
     - uses: ./.github/actions/dependencies
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
 
     - name: Generate Docs
       run: |
@@ -28,11 +38,7 @@ jobs:
   
   deploy:
     needs: docs
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write
-      id-token: write
+    runs-on: ubuntu-latest
 
     # Deploy to the github-pages environment
     environment:
@@ -40,7 +46,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     # Specify runner + deployment step
-    runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
