--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,6 +6,12 @@ on:
       - main
   workflow_dispatch:
 
+# Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   docs:
     if: ${{ !contains(github.event.head_commit.message, 'Bump version') }}
@@ -14,16 +20,34 @@ jobs:
     - uses: actions/checkout@v4.2.2
       with:
         persist-credentials: false
+
     - uses: ./.github/actions/dependencies
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
     - name: Generate Docs
       run: |
         pdm run make gen-docs
         touch docs/_build/html/.nojekyll
-    - name: Publish Docs
-      uses: JamesIves/github-pages-deploy-action@v4.6.8
+    
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BASE_BRANCH: main # The branch the action should deploy from.
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: docs/_build/html/ # The folder the action should deploy.
+        path: docs/_build/html/
+  
+  deploy:
+    needs: docs
+    runs-on: ubuntu-latest
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
