--- a/docker/Dockerfile.batch
+++ b/docker/Dockerfile.batch
@@ -10,6 +10,6 @@ RUN python -m pip install . --root-user-action=ignore
 # Install AWS CLI
 RUN apt-get update && apt-get install -y awscli
 
-COPY docker-entrypoint.sh /usr/local/bin/
-RUN ["chmod", "+x", "/usr/local/bin/docker-entrypoint.sh"]
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+COPY docker/entrypoint-batch.sh /usr/local/bin/
+RUN ["chmod", "+x", "/usr/local/bin/entrypoint-batch.sh"]
+ENTRYPOINT ["/usr/local/bin/entrypoint-batch.sh"]
