change to point cellpack install to main branch

--- a/docker/Dockerfile.ecs
+++ b/docker/Dockerfile.ecs
@@ -3,7 +3,7 @@ FROM python:3.9
 WORKDIR /cellpack
 
 RUN python -m pip install --upgrade pip --root-user-action=ignore
-RUN pip install cellpack@git+https://github.com/mesoscope/cellpack.git@staging/cellpack-server
+RUN pip install cellpack@git+https://github.com/mesoscope/cellpack.git
 
 COPY docker/server.py /cellpack/
 COPY .env /cellpack/
