--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Natural Language :: English",
     "Programming Language :: Python :: 3.9",
 ]
-requires-python = "==3.9.*"
+requires-python = "!=3.9.1,<3.10.0,>3.9.0"
 dependencies = [
     "aicsimageio>=4.14.0",
     "boto3>=1.35.98",
