Update logging to reduce verbosity
* Change print statements to logs

* Disable loggers from other packages

* Clean up log output format

* Downgrade `grpcio` to prevent unnecessary logs

* Lint using `black` and `isort`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "simulariumio>=1.11.0",
     "tqdm>=4.67.1",
     "trimesh>=4.5.3",
+    "grpcio==1.67.1",
 ]
 license = {text = "MIT license"}
 
