Add simulariumio logger configuration with WARNING level

--- a/cellpack/logging.conf
+++ b/cellpack/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,env,ingredient,grid,recipe,autopack,compartment,xmlschema,botocore
+keys=root,env,ingredient,grid,recipe,autopack,compartment,xmlschema,botocore,simulariumio
 
 [handlers]
 keys=consoleHandler
@@ -51,6 +51,12 @@ propagate=0
 level=WARNING
 handlers=
 qualname=botocore
+propagate=0
+
+[logger_simulariumio]
+level=WARNING
+handlers=
+qualname=simulariumio
 propagate=0
 
 [handler_consoleHandler]
