--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -33,9 +33,9 @@ jobs:
         touch docs/_build/html/.nojekyll
     
     - name: Upload artifact
-      uses: actions/upload-artifact@v4
+      id: deployment
+      uses: actions/upload-pages-artifact@v3
       with:
-        name: github-pages
         path: docs/_build/html/
   
   deploy:
