--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - fix/deploy-action
   workflow_dispatch:
 
 # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
@@ -32,6 +33,7 @@ jobs:
         touch docs/_build/html/.nojekyll
     
     - name: Upload artifact
+      id: deployment
       uses: actions/upload-pages-artifact@v3
       with:
         path: docs/_build/html/
