Update project to use uv and remove pdm
* Update pyproject.toml to use python 3.11
* Update github actions to use uv instead of pdm

--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -1,12 +1,12 @@
-name: PDM & Dependencies
-description: Install PDM and dependencies
+name: UV & Dependencies
+description: Install UV and dependencies
 runs:
   using: composite
   steps:
-    - uses: ./.github/actions/pdm
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
 
     - name: Install dependencies
       shell: bash
-      # --only-keep flag in case the environment is restored from a stale cache.
       run: |
-          pdm sync -d --only-keep
+          uv sync --dev
