--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,29 +14,28 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.11",
 ]
-requires-python = "!=3.9.1,<3.10.0,>3.9.0"
+requires-python = "~=3.11.0"
 dependencies = [
-    "aicsimageio>=4.14.0",
-    "boto3>=1.40.14",
-    "deepdiff>=8.6.0",
-    "fire>=0.7.1",
-    "firebase-admin>=7.1.0",
-    "matplotlib>=3.9.4",
-    "mdutils>=1.8.0",
-    "moto>=5.1.10",
-    "numpy<2.0",
-    "plotly>=6.3.0",
-    "pycollada>=0.9.2",
-    "pymunk>=7.1.0",
-    "python-dotenv>=1.1.1",
-    "rtree>=1.4.1",
-    "scipy>=1.13.1",
-    "simulariumio>=1.13.0",
-    "tqdm>=4.67.1",
-    "trimesh>=4.7.4",
-    "grpcio>=1.74.0",
+    "aicsimageio",
+    "boto3",
+    "deepdiff",
+    "fire",
+    "firebase-admin",
+    "grpcio",
+    "matplotlib",
+    "numpy",
+    "pandas",
+    "plotly",
+    "pycollada",
+    "pymunk",
+    "python-dotenv",
+    "rtree",
+    "scipy",
+    "simulariumio",
+    "tqdm",
+    "trimesh",
 ]
 license = {text = "MIT license"}
 
@@ -52,45 +51,86 @@ clean = "cellpack.bin.clean:main"
 
 [dependency-groups]
 dev = [
-    "Sphinx>=7.4.7",
-    "coverage>=7.10.4",
-    "ipython>=8.18.1",
-    "sphinx-rtd-theme>=3.0.2",
-    "tox>=4.27.0",
-    "wheel>=0.45.1",
-    "tox-pdm>=0.7.2",
-    "bumpver>=2025.1131",
-    "docutils>=0.21.2",
-    "ipykernel>=6.30.1",
-]
-setup = [
-    "pytest-runner>=6.0.1",
-    "setuptools>=80.9.0",
+    "Sphinx",
+    "coverage",
+    "ipython",
+    "ipykernel",
+    "sphinx-rtd-theme",
+    "tox",
+    "wheel",
+    "bumpver",
+    "docutils",
 ]
 test = [
-    "pytest-cov>=6.2.1",
-    "pytest-raises>=0.11",
-    "pytest>=8.4.1",
+    "moto",
+    "pytest",
+    "pytest-cov",
+    "pytest-raises",
 ]
 lint = [
-    "black>=25.1.0",
-    "flake8-debugger>=4.1.2",
-    "flake8>=7.3.0",
-    "docutils>=0.21.2",
+    "black",
+    "flake8-debugger",
+    "flake8",
+    "docutils",
 ]
 docs = [
-    "linkify-it-py>=2.0.3",
-    "myst-parser>=3.0.1",
+    "mdutils",
+    "linkify-it-py",
+    "myst-parser",
 ]
 
-[tool.pdm.scripts]
-requirements = "pdm export -f requirements --without-hashes -o"
+[build-system]
+requires = ["uv_build>=0.8.14,<0.9.0"]
+build-backend = "uv_build"
+
+[tool.uv]
+default-groups = ["dev", "lint", "test", "docs"]
+cache-dir = ".cache/uv"
+package = true
+
+[tool.uv.build-backend]
+module-root = ""
+source-include = [
+    "cellpack",
+    "docker",
+    "docs",
+    "examples",
+    "requirements",
+    ".dockerignore",
+    "tests",
+    "__init__.py",
+    ".gitignore",
+    ".python-version",
+    "LICENSE",
+    "Makefile",
+    "pyproject.toml",
+    "README.md",
+    "uv.lock"
+]
+source-exclude = [
+    ".env",
+    ".git",
+    ".github",
+    ".ipynb_checkments",
+    ".mypy_cache",
+    "__pycache__",
+    ".cache",
+    ".pytest_cache",
+    ".ruff_cache",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "out",
+]
 
 [tool.black]
 line-length = 88
 
+[tool.isort]
+profile = "black"
+
 [tool.flake8]
-include = "**/*.py"
+max-line-length = 88
 ignore = [
     "E203",
     "E402",
@@ -99,61 +139,3 @@ ignore = [
     "W291",
     "W503",
 ]
-max-line-length = 88
-
-[tool.tox]
-requires = [
-    "tox-pdm>=0.7.2",
-    "tox>=4.23.0",
-]
-env_list = [
-    "py39",
-    "lint",
-]
-base_python = "python3.9"
-
-[tool.tox.env_run_base]
-description = "Run tests with pytest under {base_python}"
-groups = [
-    "dev",
-    "test",
-    "lint",
-]
-commands = [
-    ["pytest", "--basetemp={envtmpdir}", "--cov-report", "html", "--cov=cellpack", "cellpack{/}tests"],
-]
-
-[tool.tox.env.lint]
-description = "Run linting with flake8 and black"
-groups = [
-    "lint",
-]
-commands = [
-    ["flake8", "cellpack", "--count", "--verbose", "--show-source", "--statistics", "--ignore=E203,E277,E402,E501,E721,W291,W503"],
-    ["black", "--check", "cellpack"],
-]
-
-[tool.bumpver]
-current_version = "v1.1.1"
-version_pattern = "vMAJOR.MINOR.PATCH"
-commit_message = "bump version {old_version} -> {new_version}"
-tag_message = "{new_version}"
-tag_scope = "default"
-pre_commit_hook = ""
-post_commit_hook = ""
-commit = true
-tag = true
-push = false
-
-[tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'current_version = "{version}"',
-    'version = "{version}"',
-]
-"cellpack/__init__.py" = [
-    "{version}",
-]
-
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
