Update logging level

--- a/cellpack/logging.conf
+++ b/cellpack/logging.conf
@@ -12,32 +12,32 @@ level=INFO
 handlers=consoleHandler
 
 [logger_autopack]
-level=CRITICAL
+level=INFO
 qualname=autopack
 handlers=consoleHandler
 
 [logger_compartment]
-level=CRITICAL
+level=INFO
 qualname=compartment
 handlers=consoleHandler
 
 [logger_env]
-level=CRITICAL
+level=INFO
 qualname=env
 handlers=consoleHandler
 
 [logger_grid]
-level=CRITICAL
+level=INFO
 qualname=grid
 handlers=consoleHandler
 
 [logger_ingredient]
-level=CRITICAL
+level=INFO
 qualname=ingredient
 handlers=consoleHandler
 
 [logger_recipe]
-level=CRITICAL
+level=INFO
 qualname=recipe
 handlers=consoleHandler
 
